<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mini Keyboard</string>
    <string name="ime_label">Mini Qwerty Keyboard</string>
    <string name="ime_subtype_en">English (US)</string>
    <string name="ime_subtype_vi">Vietnamese (Telex)</string>

    <string name="theme_title">Theme</string>
    <string name="theme_system">Follow system</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="enable_button">Enable keyboard</string>
    <string name="test_title">Try it out</string>
    <string name="test_hint">Type here to test the keyboard</string>

    <string name="learned_title">Learned words</string>
    <string name="backup_button">Backup learned words</string>
    <string name="restore_button">Restore learned words</string>
    <string name="backup_exported">Backup saved (%1$d words)</string>
    <string name="backup_nothing">No learned words to back up yet</string>
    <string name="backup_failed">Backup failed</string>
    <string name="restore_done">Restored %1$d learned words</string>
    <string name="restore_invalid">Invalid backup file</string>
</resources>
